<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_second"
    tools:context="com.mdwikuntobayu.androidbasic.SecondActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_lbl_str"
        android:id="@+id/login_lbl"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/username_lbl_str"
        android:id="@+id/username_lbl"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/login_lbl"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password_lbl_str"
        android:id="@+id/password_lbl"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/username_lbl"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/username_txt"
        android:layout_alignBottom="@+id/username_lbl"
        android:layout_toRightOf="@+id/login_lbl"
        android:layout_toEndOf="@+id/login_lbl"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_txt"
        android:layout_alignBottom="@+id/password_lbl"
        android:layout_toRightOf="@+id/login_lbl"
        android:layout_toEndOf="@+id/login_lbl"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_str"
        android:id="@+id/login_btn"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/password_txt"
        android:layout_alignEnd="@+id/password_txt"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/attempt_lbl_str"
        android:id="@+id/atempt_lbl"
        android:layout_below="@+id/password_lbl"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/attempt_counter_lbl"
        android:layout_alignTop="@+id/atempt_lbl"
        android:layout_toRightOf="@+id/password_lbl"
        android:layout_toEndOf="@+id/password_lbl"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/andros_iv"
        android:src="@drawable/android_round"
        android:layout_below="@+id/login_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp"
        android:layout_above="@+id/next_img_btn"
        android:layout_alignRight="@+id/next_img_btn"
        android:layout_alignEnd="@+id/next_img_btn"
        android:scaleType="fitCenter"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next Image"
        android:id="@+id/next_img_btn"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/password_txt"
        android:layout_toStartOf="@+id/password_txt"
        android:layout_marginBottom="42dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Exit"
        android:id="@+id/exit_second_btn"
        android:layout_alignTop="@+id/next_img_btn"
        android:layout_toLeftOf="@+id/login_btn"
        android:layout_toStartOf="@+id/login_btn"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go Thrid"
        android:id="@+id/next_thrid_btn"
        android:layout_alignTop="@+id/andros_iv"
        android:layout_alignRight="@+id/login_btn"
        android:layout_alignEnd="@+id/login_btn"/>

</RelativeLayout>
